Fri Dec 31 01:40:33 2004  Tim Janik  <timj@gtk.org>

	* gsldatahandle-vorbis.c: cleanups. implemented GslVorbis1Handle which
	can be used to store the compressed Ogg/Vorbis data of an Ogg/Vorbis
	GslDataHandle. this uses GslVorbisCutter internally to properly rewrite
	the Ogg stream.

	* gslvorbis-cutter.[hc]: support non-cutting mode. support specification
	of the logical bitstream to process by setting a serialno filter.

	* tests/cutvorbis.c: added option handling for -s,-p-k,-S.

	* gslloader-bsewave.c: allow loading of waves with an empty chunk list.

	* gslloader.[hc]: support loading of waves with empty chunk list.

	* gslcommon.c (gsl_error_from_errno): handle ENODATA.

Thu Dec 30 17:06:29 2004  Tim Janik  <timj@gtk.org>

	* gslloader.c (gsl_wave_dsc_free): remove bogus struct modification.

Thu Dec 30 04:05:50 2004  Tim Janik  <timj@gtk.org>

	* gslloader.c (gsl_wave_dsc_free): removed bogus g_strfreev().

Wed Dec 29 22:24:51 2004 Stefan Westerfeld <stefan@space.twc.de>

	* gslloader.h:
	* gslloader-pat.cc: Code cleanups and better error handling.

Wed Dec 29 12:52:01 2004 Stefan Westerfeld <stefan@space.twc.de>

	* bsestorage.c: Include "gslcommon.h" for gsl_byte_order_to_string.
	This fixes a segfault (and compile warning) on AMD64.

Wed Dec 29 11:37:55 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* gslloader-pat.cc: Use the new xinfo API.

	* bseieee754.h: Fix compiler warnings in bse_ftoi/bse_dtoi on AMD64.

Wed Dec 29 04:06:07 2004  Tim Janik  <timj@gtk.org>

	* gsldatacache.[hc]: tweaked caching algorithm, so 25% cache memory of
	low persistency data handles is kept upon cache sweeps, this makes the
	low persistency cache mode attractive enough for e.g. WAV files.
	changed flags, there's a high_persistency flag now which is valid only
	for opened data caches.

	* gsldatahandle-vorbis.c:
	* gsldatahandle-mad.c: set .needs-cache xinfo flag.

	* gsldatahandle-mad.c: 
	* gsldatahandle-vorbis.c:
	* gsldatahandle.h:
	* gsldatahandle.c: